--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,10 @@
     <string name="daily_withdraw_hint">Для совершения операции вам необходимо добавить информацию о счете, куда будут зачислены средства</string>
     <string name="withdraw_hint">Перевод будет осуществлен со счета:</string>
     <string name="max_sum_hint">Максимальная сумма 1000₽</string>
+    <string name="call_to_dispatcher">Позвонить диспетчеру</string>
+    <string name="call_to_dispatcher_message">Для совершения операции вам необходимо позвонить диспетчеру и он внесет информацию о вашей карте, куда будут зачислены средства</string>
+    <string name="select_card">Выберите карту</string>
+    <string name="transfer">Перевести</string>
     <!--    Accounts-->
     <string name="accounts_title">Счета и карты</string>
     <string name="daily_withdrawal">Ежедневный вывод</string>
