--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,7 +219,7 @@
     <string name="write_message_title">Здравствуйте. Вам есть что сообщить нам?</string>
     <string name="symbols_max_text">до 200 символов</string>
     <string name="thanks_title">Спасибо!\n\nВаше сообщение отправлено</string>
-    <string name="success_message">Наш сотрудник свяжется с вами через некоторое время</string>
+    <string name="success_message">Наш сотрудник перезвонит вам в ближайшее время</string>
     <string name="back_to_main_screen">Вернуться на главный экран</string>
     <string name="input_message_error">Введите сообщение</string>
     <string name="topic">Тема</string>
