--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,7 +89,7 @@
     <string name="no_withdrawal_message">Чтобы выводить средства, подключите хотя бы один счет и создайте заявку</string>
     <string name="daily_withdrawal_message">Вывод на любую карту. За вывод 1%. Перевод происходит один раз в день. Только в будни!</string>
     <string name="instant_withdrawal_message">Выводить средства можно на любую банковскую карту. За вывод взимается 4 % с суммы вывода.</string>
-    <string name="detailed">Подробнее</string>
+    <string name="what_is_it">Что это такое?</string>
     <string name="select_account">Выберите счёт</string>
     <string name="daily_withdraw_hint">Для совершения операции вам необходимо добавить информацию о счете, куда будут зачислены средства</string>
     <string name="withdraw_hint">Перевод будет осуществлен со счета:</string>
@@ -98,6 +98,7 @@
     <string name="call_to_dispatcher_message">Для совершения операции вам необходимо позвонить диспетчеру и он внесет информацию о вашей карте, куда будут зачислены средства</string>
     <string name="select_card">Выберите карту</string>
     <string name="transfer">Перевести</string>
+    <string name="thanks_request_accepted">Спасибо! \n Заявка на вывод средств принята!</string>
     <!--    Accounts-->
     <string name="accounts_title">Счета и карты</string>
     <string name="accounts">Счета</string>
@@ -134,7 +135,7 @@
     Напоминаем, что обязательный остаток в программе 500 рублей. Выводить средства можно от 1000 рублей.
     </string>
     <string name="instant_withdrawal_dialog_message">Выводить средства можно на любую банковскую карту. За вывод взимается 4 % с суммы вывода.
-    \n\nНапоминаем,что обязательный остаток в программе 500 рублей.Выводить средства можно  от 1000 рублей. Просим обратить внимание,что в день вы можете вывести не более 10.000 рублей.(это временная мера).
+    \n\nНапоминаем,что обязательный остаток в программе 500 рублей.Выводить средства можно  от 1000 рублей. Просим обратить внимание,что в день вы можете вывести не более 10.000 рублей(это временная мера).
     </string>
     <!--    Orders-->
     <string name="info_unavailable">Информация временно недоступна</string>
